fix: Changed spacing in Currently Learning on home page

--- a/src/index.css
+++ b/src/index.css
@@ -191,7 +191,7 @@ h1 {
   margin-top: 0;
 }
 #current-learn > li {
-  margin-bottom: 10px;
+  margin-bottom: 7px;
   font-weight: bold;
 }
 
